fixed waitlist z-index

--- a/src/components/css/Modal.css
+++ b/src/components/css/Modal.css
@@ -20,6 +20,7 @@
     right: 0;
     bottom: 0;
     position: fixed;
+    z-index: 2;
 }
 
 .overlay {
@@ -40,6 +41,7 @@
     max-width: 600px;
     min-width: 300px;
     animation: dropDown 0.4s ease-in forwards;
+    z-index: 3;
 }
 
 @keyframes dropDown {
